# my-own-JSONparser

./: README.md
myjsonp/: pyproject.toml
myjsonp/myjsonp/: main.py
myjsonp/tests/: test_myjsonparser.py
