[tool.poetry]
name = "myjsonp"
version = "0.1.0"
description = ""
authors = ["mariollesta"]
readme = "README.md"

[tool.poetry.scripts]
myjsonp = "myjsonp.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
assertpy = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
